--- a/lab/v7/index.html
+++ b/lab/v7/index.html
@@ -4,7 +4,10 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Djungo Console — Part 6</title>
+  
+<title>Djungo Console — Part 7</title>
+<h1>Djungo Console <span class="muted">— Part 7</span></h1>
+  
 <style>
   body { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; max-width: 980px; margin: 28px auto; padding: 0 16px; }
   h1 { margin: 0 0 8px; }
@@ -27,13 +30,12 @@
   <input id="webAppUrl" placeholder="https://script.google.com/macros/s/XXXXX/exec" />
 
   <div class="row">
+
     <div>
-      <label>part</label>
-      <select id="part">
+     <select id="part" disabled>
         <option value="6" selected>6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-      </select>
+    </select>
+      
     </div>
     <div>
       <label>mode</label>
