--- a/lab/v7/index.html
+++ b/lab/v7/index.html
@@ -1,13 +1,20 @@
-
 <!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-  
-<title>Djungo Console — Part 7</title>
-<h1>Djungo Console <span class="muted">— Part 7</span></h1>
-  
+
+<!-- =========================================================
+     DJUNGO-EDIT (SERIE / PART)
+     - Cambia SOLO questo titolo ad ogni articolo.
+     - Regola: Part N -> aggiorna Title + H1 + eventuale testo introduttivo.
+     - Esempio:
+       Part 6  -> "Djungo Console — Part 6"
+       Part 7  -> "Djungo Console — Part 7"
+       ...
+========================================================= -->
+<title>Djungo Console — Part 6</title>
+
 <style>
   body { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; max-width: 980px; margin: 28px auto; padding: 0 16px; }
   h1 { margin: 0 0 8px; }
@@ -22,23 +29,57 @@
 </head>
 <body>
 
+<!-- =========================================================
+     DJUNGO-EDIT (SERIE / PART)
+     - Cambia SOLO "Part 6" qui dentro quando pubblichi la prossima.
+========================================================= -->
 <h1>Djungo Console <span class="muted">— Part 6</span></h1>
+
+<!-- =========================================================
+     DJUNGO-EDIT (COPERTINA ARTICOLO)
+     - Qui puoi cambiare la descrizione per allinearla al tema dell'articolo.
+     - Non serve ogni volta, ma aiuta a "ancorare" il lettore.
+========================================================= -->
 <div class="muted">Protocol simulator: build URL → mock/live JSONP → inspect response.</div>
 
 <div class="card">
   <label>WEB_APP_URL (Apps Script Web App)</label>
+
+  <!-- =========================================================
+       DJUNGO-EDIT (DEPLOY URL)
+       - In produzione puoi pre-compilare value="https://script.google.com/macros/s/....../exec"
+       - Oppure lasciarlo vuoto e lo inserisce il lettore.
+       - Importante: per MOCK non serve; per LIVE serve.
+  ========================================================= -->
   <input id="webAppUrl" placeholder="https://script.google.com/macros/s/XXXXX/exec" />
 
   <div class="row">
-
     <div>
-     <select id="part" disabled>
+      <label>part</label>
+
+      <!-- =========================================================
+           DJUNGO-EDIT (PART LIST)
+           - All'inizio mostri 6/7/8 per far capire evoluzione.
+           - Più avanti nella serie puoi estendere:
+             <option value="9">9</option> ... fino a 30
+           - Regola: NON cambiare la logica JS: aggiorna solo le option.
+      ========================================================= -->
+      <select id="part">
         <option value="6" selected>6</option>
-    </select>
-      
+        <option value="7">7</option>
+        <option value="8">8</option>
+      </select>
     </div>
     <div>
       <label>mode</label>
+
+      <!-- =========================================================
+           DJUNGO-EDIT (MODES DISPONIBILI)
+           - Part 6: test/echo/meta/view
+           - Nei prossimi articoli, quando aggiungerai insert/update/delete,
+             AGGIUNGI qui i nuovi mode.
+           - Coerenza: i mode devono esistere anche nel backend (route_).
+      ========================================================= -->
       <select id="mode">
         <option value="test" selected>test</option>
         <option value="echo">echo</option>
@@ -78,10 +119,20 @@
 </div>
 
 <script>
+  // =========================================================
+  // DJUNGO NOTE
+  // JSONP requires a global callback name.
+  // We generate unique cb to avoid collisions and caching weirdness.
+  // =========================================================
   function makeCbName() {
     return "cb_" + Date.now() + "_" + Math.floor(Math.random()*1e6);
   }
 
+  // =========================================================
+  // DJUNGO-EDIT (MOCK PAYLOADS)
+  // - Quando evolvi il protocollo, aggiorna i mock per "simulare" Part future.
+  // - Regola: MOCK deve essere didattico, non "realistico".
+  // =========================================================
   function mockResponse(mode, part, limit) {
     if (mode === "test") return { ok:true, msg:"Mock OK test", part:Number(part) };
     if (mode === "echo") return { ok:true, part:Number(part), receivedParams:{ part:String(part), mode:"echo" } };
@@ -92,6 +143,12 @@
 
   function buildUrl() {
     const base = document.getElementById("webAppUrl").value.trim();
+
+    // =========================================================
+    // DJUNGO RULE (IMPORTANT)
+    // - In LIVE mode il base URL è obbligatorio.
+    // - In MOCK mode non lo chiediamo.
+    // =========================================================
     if (!base) throw new Error("Missing WEB_APP_URL");
 
     const part = document.getElementById("part").value;
@@ -100,11 +157,20 @@
 
     const cb = makeCbName();
     const u = new URL(base);
+
+    // =========================================================
+    // DJUNGO CORE PROTOCOL
+    // part -> selects the backend branch (route by part)
+    // mode -> selects the action inside that part
+    // cb   -> defines JSONP execution context (callback function)
+    // _    -> cache-bust
+    // =========================================================
     u.searchParams.set("part", part);
     u.searchParams.set("mode", mode);
     u.searchParams.set("cb", cb);
     u.searchParams.set("_", Date.now().toString());
 
+    // limit is only meaningful for view
     if (mode === "view") u.searchParams.set("limit", limit || "20");
 
     return { url: u.toString(), cb };
@@ -135,45 +201,49 @@
   const urlOut = document.getElementById("urlOut");
   const respOut = document.getElementById("respOut");
 
- document.getElementById("runBtn").addEventListener("click", async () => {
-  try {
-    const runType = document.getElementById("runType").value;
-    const part = document.getElementById("part").value;
-    const mode = document.getElementById("mode").value;
-    const limit = document.getElementById("limit").value;
+  document.getElementById("runBtn").addEventListener("click", async () => {
+    try {
+      const runType = document.getElementById("runType").value;
+      const part = document.getElementById("part").value;
+      const mode = document.getElementById("mode").value;
+      const limit = document.getElementById("limit").value;
 
-    // =========================
-    // MOCK MODE
-    // =========================
-    if (runType === "mock") {
+      // =========================
+      // MOCK MODE (no WEB_APP_URL)
+      // =========================
+      if (runType === "mock") {
 
-      const fakeUrl =
-        `mock://djungo-console?part=${encodeURIComponent(part)}` +
-        `&mode=${encodeURIComponent(mode)}` +
-        `&limit=${encodeURIComponent(limit)}` +
-        `&_=${Date.now()}`;
+        // =========================================================
+        // DJUNGO-EDIT (FAKE URL)
+        // - Questa url mock è didattica: fa capire i parametri senza rete.
+        // =========================================================
+        const fakeUrl =
+          `mock://djungo-console?part=${encodeURIComponent(part)}` +
+          `&mode=${encodeURIComponent(mode)}` +
+          `&limit=${encodeURIComponent(limit)}` +
+          `&_=${Date.now()}`;
 
-      urlOut.textContent = fakeUrl;
+        urlOut.textContent = fakeUrl;
 
-      const mockData = mockResponse(mode, part, limit);
-      respOut.textContent = JSON.stringify(mockData, null, 2);
+        const mockData = mockResponse(mode, part, limit);
+        respOut.textContent = JSON.stringify(mockData, null, 2);
 
-      return;
+        return;
+      }
+
+      // =========================
+      // LIVE MODE (requires WEB_APP_URL)
+      // =========================
+      const { url, cb } = buildUrl();   // SOLO QUI serve WEB_APP_URL
+      urlOut.textContent = url;
+
+      const data = await jsonpRequest(url, cb);
+      respOut.textContent = JSON.stringify(data, null, 2);
+
+    } catch (e) {
+      respOut.textContent = "ERROR: " + e.message;
     }
-
-    // =========================
-    // LIVE MODE
-    // =========================
-    const { url, cb } = buildUrl();   // SOLO QUI serve WEB_APP_URL
-    urlOut.textContent = url;
-
-    const data = await jsonpRequest(url, cb);
-    respOut.textContent = JSON.stringify(data, null, 2);
-
-  } catch (e) {
-    respOut.textContent = "ERROR: " + e.message;
-  }
-});
+  });
 
 </script>
 
